--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@vercel/speed-insights",
+      "sharp"
+    ]
   }
 }
