--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/react-avatar": "^1.1.7",
 		"@radix-ui/react-dialog": "^1.1.11",
 		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
